--- a/src/components/Talk/Talk.scss
+++ b/src/components/Talk/Talk.scss
@@ -2,6 +2,7 @@
 	display: block;
 	position: fixed;
 	bottom: 70px;
+	left: -20px;
 	z-index: 9;
 	transform: rotate(-90deg);
 	transform-origin: center center;
