--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -1,6 +1,7 @@
 #logo {
 	position: fixed;
 	top: 70px;
+	left: -20px;
 	z-index: 99;
 	transform: rotate(-90deg);
 	transform-origin: center center;
